@@ -90,11 +90,14 @@
             "List::AllUtils" : "0",
             "Module::Load::Conditional" : "0",
             "Moose" : "0",
+            "MooseX::Types" : "0",
+            "MooseX::Types::Path::Tiny" : "0",
             "Net::GitHub::V3" : "0",
             "Pantry" : "0",
             "Path::Class" : "0",
             "Path::Class::Rule" : "0",
             "Path::Iterator::Rule" : "0",
+            "Path::Tiny" : "0",
             "Perl::Critic::Lax" : "0",
             "Perl::Version" : "0",
             "Plack" : "0",
@@ -138,7 +141,7 @@
    "provides" : {
       "Task::BeLike::DAGOLDEN" : {
          "file" : "lib/Task/BeLike/DAGOLDEN.pm",
-         "version" : "0.003"
+         "version" : "0.004"
       }
    },
    "release_status" : "stable",
@@ -154,6 +157,6 @@
          "web" : "https://github.com/dagolden/task-belike-dagolden"
       }
    },
-   "version" : "0.003"
+   "version" : "0.004"
 }
 
