@@ -6,7 +6,7 @@ Task::BeLike::DAGOLDEN - DAGOLDEN's frequently-used or favorite modules
 
 =head1 VERSION
 
-version 0.003
+version 0.004
 
 =head1 TASK CONTENTS
 
@@ -53,6 +53,8 @@ version 0.003
 =head3 L<Path::Class::Rule>
 
 =head3 L<Path::Iterator::Rule>
+
+=head3 L<Path::Tiny>
 
 =head2 Database Modules
 
@@ -118,8 +120,6 @@ Better than Test::Class
 
 =head3 L<Module::Load::Conditional>
 
-=head3 L<Moose>
-
 =head3 L<Perl::Version>
 
 =head3 L<Pod::Strip>
@@ -129,6 +129,14 @@ Better than Test::Class
 =head3 L<namespace::autoclean>
 
 =head3 L<version>
+
+=head2 Moose
+
+=head3 L<Moose>
+
+=head3 L<MooseX::Types>
+
+=head3 L<MooseX::Types::Path::Tiny>
 
 =head2 Email tools
 
